<resources>
    <string name="app_name">My Application</string>
    <string name="send">Send</string>
    <string name="ok">Ok</string>
    <string name="cansel">Cansel</string>
    <string name="second_activity_title">SecondActivity</string>
    <string name="main_activity_title">MainActivity</string>
    <string name="setting">Setting</string>
    <string name="addPhone">AddPhone</string>
    <string name="fragmentChooser">FragmentChooser</string>
    <string name="fragmentViewer">FragmentViewer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="samsung">Samsung</string>
    <string name="iphone">IPhone</string>
    <string name="realme">Realme</string>
    <string name="huawei">Huawei</string>
    <string name="name_phone">Название телефона</string>
    <string name="ram">Объем оперативной памяти</string>
    <string name="model_cpu">Модель процессора</string>
    <string name="history">History</string>
</resources>
